--- a/test_files/test_file.ipynb
+++ b/test_files/test_file.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "cell_id": 0
+    "cell_id": 0,
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "source": [
     "<div style=\"text-align: center; margin: 20px;\">\n",
@@ -137,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
