started change to design

--- a/test_files/ipytest.ipynb
+++ b/test_files/ipytest.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "cell_id": 0,
+    "class": 0,
     "cluster_id": 1,
     "code_id": 1,
     "codes": [
