commit for meeting

--- a/backend/src/final_test.ipynb
+++ b/backend/src/final_test.ipynb
@@ -1678,13 +1678,8 @@
    "metadata": {
     "cell_id": 0,
     "class": "Data_Extraction",
-    "editable": true,
     "notebook_id": 5,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "start_cell": true,
-    "tags": []
+    "start_cell": true
    },
    "outputs": [],
    "source": [
