make extension start automatically and only if has visualization field in metadata

--- a/test_files/new_format.ipynb
+++ b/test_files/new_format.ipynb
@@ -86,6 +86,7 @@
   }
  ],
  "metadata": {
+  "visualization": true,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
