modify visualizatoin true

--- a/test_files/final_test.ipynb
+++ b/test_files/final_test.ipynb
@@ -21489,6 +21489,7 @@
   }
  ],
  "metadata": {
+  "visualization" : true,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
