--- a/test_files/final_test.ipynb
+++ b/test_files/final_test.ipynb
@@ -21489,7 +21489,6 @@
   }
  ],
  "metadata": {
-  "visualization" : true,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -21505,8 +21504,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
-  }
+   "version": "3.12.4"
+  },
+  "visualization": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
