--- a/test_files/new_format.ipynb
+++ b/test_files/new_format.ipynb
@@ -86,7 +86,6 @@
   }
  ],
  "metadata": {
-  "visualization": true,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -102,8 +101,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
-  }
+   "version": "3.9.13"
+  },
+  "visualization": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
