integrated markdown cells in dataset genereation

--- a/src/backend/Classifiers/evaluating.ipynb
+++ b/src/backend/Classifiers/evaluating.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,32 +10,20 @@
     "\n",
     "from Classifiers.GPTClassifier import GPTClassifier\n",
     "from utils.helper_functions import ipynb_to_json, notebook_extract_code, notebook_add_class_labels, kaggle_pull_competiton\n",
-    "from utils.constants import FIRST_LAYER_LABELS, SECOND_LAYER_LABELS, BLANK_IPYNB_JSON"
+    "from utils.constants import FIRST_LAYER_LABELS, classifier_prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../../secrets/api_key.txt', 'r') as f: api_key = f'{f.read()}'\n",
-    "\n",
+    "with open('../../../secrets/api_key.txt', 'r') as f: api_key = f'{f.read()}'\n",
     "\n",
     "LABELS = FIRST_LAYER_LABELS\n",
-    "# LABELS = SECOND_LAYER_LABELS\n",
     "\n",
-    "\n",
-    "print(f\"Initializing classifier...\")\n",
-    "prompt = f\"\"\"You will be given each code cell of the same jupyter notebook of a machine learning task.\n",
-    "First, classify the code into one {', '.join(LABELS[:-1])} or {LABELS[-1]}.\n",
-    "Consider the previously classified code snippets for context.\n",
-    "Then, describe what the code snippet does in strictly one sentence.\n",
-    "Explain your reasoning for the classification and then output the desired format at the end.\n",
-    "Desired format:\n",
-    "Class: <class_label>\n",
-    "Description: <desctiption_sentence>\n",
-    "\"\"\" \n",
+    "prompt = classifier_prompt(LABELS)\n",
     "classifier = GPTClassifier(api_key=api_key, prompt=prompt, labels=LABELS)"
    ]
   },
