--- a/src/backend/utils/create_test_dataset.ipynb
+++ b/src/backend/utils/create_test_dataset.ipynb
@@ -1450,6 +1450,238 @@
     "    \n",
     "print(f\"Saved {len(notebooks)} notebooks to {test_dataset_dir}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import HDBSCAN\n",
+    "\n",
+    "clusterer = HDBSCAN(\n",
+    "    min_cluster_size=4,\n",
+    "    min_samples=2,\n",
+    "    cluster_selection_epsilon=.0,\n",
+    "    max_cluster_size=None,\n",
+    "    alpha=1.0\n",
+    ")\n",
+    "\n",
+    "clusters = {}\n",
+    "for key, group in grouped_cells.items(): \n",
+    "    X = np.array([cell[\"embedding\"] for cell in group])\n",
+    "    \n",
+    "    if len(group) < 4:\n",
+    "        labels = [-1] * len(group)\n",
+    "    else:\n",
+    "        pca = PCA(n_components=2)\n",
+    "        pca.fit(X)\n",
+    "        embeddings_pca = pca.transform(X)\n",
+    "        clusterer.fit(embeddings_pca)\n",
+    "        labels = clusterer.labels_\n",
+    "        \n",
+    "    clusters[key] = {str(label): [] for label in set(labels)}\n",
+    "    for cell, label, embedding in zip(group, labels, embeddings_pca):\n",
+    "        clusters[key][str(label)].append({\n",
+    "            \"cell\": cell,\n",
+    "            \"embedding\": embedding\n",
+    "        })\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key, elems in clusters.items():\n",
+    "    print(f\"Class: {key}\")\n",
+    "    for label, group in elems.items():\n",
+    "        print(f\"    {label}: {len(group)}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Create a scatter plot of the embeddings\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "for key, clusts in clusters.items():\n",
+    "    \n",
+    "    \n",
+    "    plt.scatter(\n",
+    "        x=embeddings_pca[:, 0],\n",
+    "        y=embeddings_pca[:, 1],\n",
+    "        cmap='viridis',\n",
+    "        alpha=0.5,\n",
+    "        label=key\n",
+    "    )\n",
+    "    plt.legend()\n",
+    "    plt.xlabel('Principal Component 1')\n",
+    "    plt.ylabel('Principal Component 2')\n",
+    "    plt.title('Clusters Visualization')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.helper_functions import notebook_extract_code, notebook_add_class_labels\n",
+    "\n",
+    "notebooks = []\n",
+    "for kernel_id in merged_df['kernel_id'].unique()[:20]:\n",
+    "    notebook_json = BLANK_IPYNB_JSON.copy()\n",
+    "    notebook_json['cells'] = []\n",
+    "    for row in merged_df[merged_df['kernel_id'] == kernel_id].iterrows():\n",
+    "        notebook_json['cells'].append({\n",
+    "            \"cell_type\": \"code\",\n",
+    "            \"execution_count\": None,\n",
+    "            \"metadata\": {\n",
+    "                \"graph_vertex_id\": row[1][\"graph_vertex_id\"],\n",
+    "                \"predicted_graph_vertex__probability\": row[1][\"predicted_graph_vertex__probability\"],\n",
+    "                \"notebook_id\": row[1]['kernel_id'],\n",
+    "            },\n",
+    "            \"source\": row[1]['code_block']\n",
+    "        })\n",
+    "    notebooks.append(notebook_json)\n",
+    "# notebook_code = notebook_extract_code(notebook_json)\n",
+    "# cell_labels = classifier.classify_notebook(notebook_code)\n",
+    "# notebook_json = notebook_add_class_labels(notebook_json, cell_labels)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labeled_notebooks = []\n",
+    "notebook_cell_labels = []\n",
+    "for i, notebook_json in enumerate(notebooks):\n",
+    "    print(f\"Notebook {i+1}/{len(notebooks)}\", end='\\r')\n",
+    "    \n",
+    "    notebook_code = notebook_extract_code(notebook_json)\n",
+    "    cell_labels = classifier.classify_notebook(notebook_code)\n",
+    "    notebook_json = notebook_add_class_labels(notebook_json, cell_labels)\n",
+    "    labeled_notebooks.append(notebook_json)\n",
+    "    notebook_cell_labels.append(cell_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings = []\n",
+    "for notebook in notebook_cell_labels:\n",
+    "    for elem in notebook:\n",
+    "        embeddings.append(elem[1])\n",
+    "embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import HDBSCAN\n",
+    "\n",
+    "clusterer: HDBSCAN = HDBSCAN(\n",
+    "    min_cluster_size=4,                 # Minimum number of samples to form a cluster\n",
+    "    min_samples=2,                      # Minimum number of samples in a neighborhood to be considered as a core point\n",
+    "    cluster_selection_epsilon=0,     # If 2 clusters are less than epsilon apart, they get merged\n",
+    ")\n",
+    "\n",
+    "clusterer.fit(embeddings)\n",
+    "for label in set(clusterer.labels_):\n",
+    "    print(f\"Cluster {label}: {len([x for x in clusterer.labels_ if x == label])} cells\")\n",
+    "clusterer.labels_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counter = 0\n",
+    "for notebook in labeled_notebooks:\n",
+    "    for cell in notebook['cells']:\n",
+    "        cell['metadata']['cluster_label'] = clusterer.labels_[counter]\n",
+    "        counter += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labeled_notebooks[0][\"cells\"]\n",
+    "true_labels = []\n",
+    "predicted_labels = []\n",
+    "for notebook in labeled_notebooks:\n",
+    "    for cell in notebook[\"cells\"]:\n",
+    "        true_labels.append(cell[\"metadata\"][\"graph_vertex_id\"])\n",
+    "        predicted_labels.append(cell[\"metadata\"][\"cluster_label\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.optimize import linear_sum_assignment\n",
+    "import numpy as np\n",
+    "\n",
+    "def count_misclustered_elements(true_labels, predicted_labels):\n",
+    "    # Convert the labels to numpy arrays for easier manipulation\n",
+    "    true_labels = np.array(true_labels)\n",
+    "    predicted_labels = np.array(predicted_labels)\n",
+    "    \n",
+    "    unique_true_labels = np.unique(true_labels)\n",
+    "    unique_predicted_labels = np.unique(predicted_labels)\n",
+    "    \n",
+    "    cost_matrix = np.zeros((len(unique_true_labels), len(unique_predicted_labels)), dtype=int)\n",
+    "    \n",
+    "    for i, true_label in enumerate(unique_true_labels):\n",
+    "        for j, predicted_label in enumerate(unique_predicted_labels):\n",
+    "            cost_matrix[i, j] = np.sum((true_labels == true_label) & (predicted_labels != predicted_label))\n",
+    "    \n",
+    "    row_ind, col_ind = linear_sum_assignment(cost_matrix)\n",
+    "    \n",
+    "    misclustered_count = cost_matrix[row_ind, col_ind].sum()\n",
+    "    \n",
+    "    return misclustered_count\n",
+    "\n",
+    "misclustered_count = count_misclustered_elements(true_labels, predicted_labels)\n",
+    "print(f\"Number of misclustered elements: {misclustered_count}/{len(true_labels)}\")\n",
+    "print(f\"Score: {1 - misclustered_count/len(true_labels)} %\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for notebook in labeled_notebooks:\n",
+    "    for cell in notebook['cells']:\n",
+    "        cell['metadata']['cluster_label'] = clusterer.labels_[counter]\n",
+    "        counter += 1"
+   ]
   }
  ],
  "metadata": {
