--- a/src/backend/Clusterers/test_clustering.ipynb
+++ b/src/backend/Clusterers/test_clustering.ipynb
@@ -25,7 +25,7 @@
      "text": [
       "/home/ryounis/.local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "100%|██████████| 28/28 [01:58<00:00,  4.23s/it]"
+      "100%|██████████| 28/28 [02:11<00:00,  4.69s/it]"
      ]
     },
     {
@@ -418,14 +418,14 @@
     "import numpy as np\n",
     "import sklearn.metrics.pairwise as pairwise\n",
     " \n",
-    "reduced_embeddings = pairwise.cosine_distances(reduced_embeddings)\n",
+    "# reduced_embeddings = pairwise.cosine_distances(reduced_embeddings)\n",
     "clusterer = HDBSCAN(\n",
     "    min_cluster_size=10,\n",
     "    min_samples=2,\n",
     "    cluster_selection_epsilon=0,\n",
     "    max_cluster_size=None,\n",
     "    alpha=1,\n",
-    "    metric=\"precomputed\"\n",
+    "    # metric=\"precomputed\"\n",
     ")\n",
     "\n",
     "clusterer.fit(reduced_embeddings)\n",
