added usernames and changed title-generation prompt

--- a/src/backend/utils/create_test_dataset.ipynb
+++ b/src/backend/utils/create_test_dataset.ipynb
@@ -1301,30 +1301,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "725"
+       "'/mohamedmostafa335/nlp-tokenization-embedding-lstm'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "distinct_kernel_links = kernels['kernel_link'].unique()\n",
-    "len(distinct_kernel_links)"
+    "distinct_kernel_links[5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>kernel_id</th>\n",
+       "      <th>code_block_id</th>\n",
+       "      <th>code_block</th>\n",
+       "      <th>kernel_link</th>\n",
+       "      <th>predicted_graph_vertex__probability</th>\n",
+       "      <th>graph_vertex_id</th>\n",
+       "      <th>graph_vertex_class</th>\n",
+       "      <th>graph_vertex_subclass</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>22956883</td>\n",
+       "      <td>0</td>\n",
+       "      <td>import numpy as np\\nimport pandas as pd\\nfrom ...</td>\n",
+       "      <td>/renraeldab/disaster-tweets</td>\n",
+       "      <td>0.999302</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Imports_and_Environment</td>\n",
+       "      <td>import_modules</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>22956883</td>\n",
+       "      <td>1</td>\n",
+       "      <td>train = pd.read_csv('/kaggle/input/nlp-getting...</td>\n",
+       "      <td>/renraeldab/disaster-tweets</td>\n",
+       "      <td>0.999751</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Data_Extraction</td>\n",
+       "      <td>load_from_csv</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>22956883</td>\n",
+       "      <td>2</td>\n",
+       "      <td>def filter_text(df):\\n    df['text']=df['text'...</td>\n",
+       "      <td>/renraeldab/disaster-tweets</td>\n",
+       "      <td>0.995599</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Data_Transform</td>\n",
+       "      <td>feature_engineering</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>22956883</td>\n",
+       "      <td>3</td>\n",
+       "      <td>sw=['the', 'a', 'an', 'in', 'on', 'with', 'by'...</td>\n",
+       "      <td>/renraeldab/disaster-tweets</td>\n",
+       "      <td>0.997215</td>\n",
+       "      <td>77</td>\n",
+       "      <td>Exploratory_Data_Analysis</td>\n",
+       "      <td>define_variables</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>22956883</td>\n",
+       "      <td>4</td>\n",
+       "      <td>v = CountVectorizer(stop_words=sw)\\ntrain_v = ...</td>\n",
+       "      <td>/renraeldab/disaster-tweets</td>\n",
+       "      <td>0.997267</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Data_Transform</td>\n",
+       "      <td>feature_engineering</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>22956883</td>\n",
+       "      <td>5</td>\n",
+       "      <td>y = train['target']</td>\n",
+       "      <td>/renraeldab/disaster-tweets</td>\n",
+       "      <td>0.999064</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Data_Transform</td>\n",
+       "      <td>prepare_x_and_y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>22956883</td>\n",
+       "      <td>6</td>\n",
+       "      <td>clf = MultinomialNB()\\nscorer = make_scorer(f1...</td>\n",
+       "      <td>/renraeldab/disaster-tweets</td>\n",
+       "      <td>0.983758</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Model_Train</td>\n",
+       "      <td>train_on_grid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>22956883</td>\n",
+       "      <td>7</td>\n",
+       "      <td>y = model.predict(test_v)\\noutput = pd.DataFra...</td>\n",
+       "      <td>/renraeldab/disaster-tweets</td>\n",
+       "      <td>0.999141</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Data_Export</td>\n",
+       "      <td>save_to_csv</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    kernel_id  code_block_id  \\\n",
+       "43   22956883              0   \n",
+       "44   22956883              1   \n",
+       "45   22956883              2   \n",
+       "46   22956883              3   \n",
+       "47   22956883              4   \n",
+       "48   22956883              5   \n",
+       "49   22956883              6   \n",
+       "50   22956883              7   \n",
+       "\n",
+       "                                           code_block  \\\n",
+       "43  import numpy as np\\nimport pandas as pd\\nfrom ...   \n",
+       "44  train = pd.read_csv('/kaggle/input/nlp-getting...   \n",
+       "45  def filter_text(df):\\n    df['text']=df['text'...   \n",
+       "46  sw=['the', 'a', 'an', 'in', 'on', 'with', 'by'...   \n",
+       "47  v = CountVectorizer(stop_words=sw)\\ntrain_v = ...   \n",
+       "48                                y = train['target']   \n",
+       "49  clf = MultinomialNB()\\nscorer = make_scorer(f1...   \n",
+       "50  y = model.predict(test_v)\\noutput = pd.DataFra...   \n",
+       "\n",
+       "                    kernel_link  predicted_graph_vertex__probability  \\\n",
+       "43  /renraeldab/disaster-tweets                             0.999302   \n",
+       "44  /renraeldab/disaster-tweets                             0.999751   \n",
+       "45  /renraeldab/disaster-tweets                             0.995599   \n",
+       "46  /renraeldab/disaster-tweets                             0.997215   \n",
+       "47  /renraeldab/disaster-tweets                             0.997267   \n",
+       "48  /renraeldab/disaster-tweets                             0.999064   \n",
+       "49  /renraeldab/disaster-tweets                             0.983758   \n",
+       "50  /renraeldab/disaster-tweets                             0.999141   \n",
+       "\n",
+       "    graph_vertex_id         graph_vertex_class graph_vertex_subclass  \n",
+       "43               22    Imports_and_Environment        import_modules  \n",
+       "44               45            Data_Extraction         load_from_csv  \n",
+       "45                8             Data_Transform   feature_engineering  \n",
+       "46               77  Exploratory_Data_Analysis      define_variables  \n",
+       "47                8             Data_Transform   feature_engineering  \n",
+       "48               21             Data_Transform       prepare_x_and_y  \n",
+       "49                6                Model_Train         train_on_grid  \n",
+       "50               25                Data_Export           save_to_csv  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "filtered_df = merged_df[merged_df['kernel_link'] == distinct_kernel_links[3]].sort_values('code_block_id', ascending=True)\n",
     "filtered_df"
@@ -1349,14 +1520,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 27%|██▋       | 8/30 [00:05<00:10,  2.08it/s]"
+      " 27%|██▋       | 8/30 [00:04<00:10,  2.03it/s]"
      ]
     },
     {
@@ -1370,7 +1541,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|█████     | 15/30 [00:09<00:06,  2.33it/s]"
+      " 50%|█████     | 15/30 [00:08<00:06,  2.27it/s]"
      ]
     },
     {
@@ -1384,14 +1555,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:18<00:00,  1.62it/s]"
+      "100%|██████████| 30/30 [00:17<00:00,  1.71it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 28 notebooks to /home/ryounis/Documents/Zurich/PEACHLab/datascience-visualisation/src/backend/data/datasets/Natural Language Processing with Disaster Tweets/unclassified\n"
+      "Saved 28 notebooks to /home/ryounis/Documents/Zurich/PEACHLab/datascience-visualisation/data/datasets/Natural Language Processing with Disaster Tweets/unclassified\n"
      ]
     },
     {
@@ -1412,8 +1583,7 @@
     "import tempfile \n",
     "from kaggle.api.kaggle_api_extended import ApiException\n",
     "from tqdm import tqdm\n",
-    "\n",
-    "test_dataset_dir = f\"datascience-visualisation/data/datasets/{top_comp}/unclassified\"\n",
+    "test_dataset_dir = f\"/home/ryounis/Documents/Zurich/PEACHLab/datascience-visualisation/data/datasets/{top_comp}/unclassified\"\n",
     "if not os.path.exists(test_dataset_dir): os.makedirs(test_dataset_dir)\n",
     "\n",
     "FIRST_N_KERNELS = 30\n",
@@ -1446,7 +1616,8 @@
     "            }    \n",
     "    notebook[\"metadata\"][\"labels\"] = LABELS\n",
     "    notebooks.append(notebook)\n",
-    "    with open(f\"{test_dataset_dir}/{kernel_link.split('/')[-1]}.ipynb\", \"w\") as f:json.dump(notebook, f)\n",
+    "    filename = \"_\".join(kernel_link.split('/')[1:])\n",
+    "    with open(f\"{test_dataset_dir}/{filename}.ipynb\", \"w\") as f:json.dump(notebook, f)\n",
     "    \n",
     "print(f\"Saved {len(notebooks)} notebooks to {test_dataset_dir}\")"
    ]
